--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="./css/master.css">
         <title>UntrefSchool</title>
 </head>
@@ -36,25 +39,63 @@
             </figure>
             <p id="titulo">UntrefSchool</p>
         </section>
-         <section class="Seccion" id="QuienesSomos">
-                <h1>Quienes Somos</h1>
-                <img src="" alt="">
+        <h1>Quienes Somos</h1>
+
+             <section class="Seccion" id="QuienesSomos">
+                <img src="./img/QuienesSomos.png" alt="QuienesSomos">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit quo libero consequatur suscipit voluptatum sequi delectus enim modi laborum harum. Perspiciatis laborum, voluptatem veritatis molestias recusandae odit possimus, sunt obcaecati enim nobis esse. Tempora, nam. Fugit, doloribus. Inventore nemo natus tenetur, cupiditate magnam placeat provident blanditiis aliquam voluptatibus quis impedit odit reprehenderit nobis. Dignissimos fugiat deserunt commodi rerum consectetur! Doloribus dignissimos eos cupiditate assumenda ad odio nulla in quo? Omnis repellat repellendus, voluptatem blanditiis dicta praesentium enim mollitia porro, distinctio dolore a voluptas adipisci. Laborum fugit amet reiciendis sed quibusdam, magnam et minima sequi expedita harum veniam dolorem ea nostrum inventore laboriosam iusto deserunt quaerat rem distinctio, dolorum cupiditate velit eius aliquid enim! Non, alias. Cum officiis aliquid unde dolores, quidem obcaecati ipsum consequatur maiores eius dolorum dolor. Quis adipisci, reiciendis eligendi exercitationem repellendus necessitatibus totam unde eius blanditiis ab architecto alias deserunt enim voluptatum corporis pariatur optio dolor perferendis nulla? Nostrum, aspernatur. Et, corporis, illum quia ipsa voluptatibus nisi inventore possimus aut exercitationem doloremque iure reprehenderit unde ratione nemo libero molestiae minus rem amet enim provident vitae ad! Aspernatur eius sapiente totam animi quaerat exercitationem facere quae veritatis blanditiis hic at, nobis, corrupti, explicabo dolorum beatae. Quo, id exercitationem?</p>
-         </section>
-         <section class="Seccion" id="PorQueElegirnos">
-    <h2>¿Por qué Elegirnos?</h2>
-            <img src="" alt="">
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam officiis, hic fugit quis animi, eligendi ab accusantium voluptate vero praesentium rerum numquam perferendis eos, dignissimos delectus facere alias! Possimus in veritatis facere inventore vel laboriosam. Dignissimos quae quod, doloremque accusantium non eligendi adipisci quos ipsam rem obcaecati voluptatibus, quidem veritatis nihil, amet repellendus harum modi eum vero consequatur. Perspiciatis quisquam dolore aliquam nisi aliquid! Maxime laudantium saepe illum unde rerum excepturi suscipit, praesentium fuga reprehenderit earum autem odio quod sint ducimus architecto non tempora! At quidem quaerat sint voluptatum officiis. Soluta placeat repudiandae officiis reprehenderit explicabo ducimus perferendis non beatae a, odit illo optio maxime iusto sapiente reiciendis inventore eveniet magnam sed eos hic pariatur voluptates? Maiores enim voluptates recusandae autem asperiores suscipit perspiciatis, totam blanditiis nihil provident eum perferendis eos itaque? Reprehenderit pariatur blanditiis mollitia reiciendis molestias asperiores sint velit. Ullam officiis rem amet delectus est eos libero quia, reiciendis et molestias, ducimus, quos dolorum doloremque nulla facere commodi. Neque doloribus repudiandae voluptatem totam hic eius autem! Eligendi, vero? Impedit nobis reiciendis nostrum esse facilis sed non tenetur officiis nesciunt nihil quam rerum, aspernatur ipsa labore reprehenderit deleniti facere eveniet harum perferendis ad ea minima cupiditate. Eos, quam minus?</p>
-         </section>
-         <section class="Seccion" id="PropuestaEducativa">
-            <h2>Propuesta Educativa</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta autem adipisci molestias repellat dolores blanditiis aliquid rerum et corrupti eos corporis impedit a ea architecto non magni, explicabo hic! Dignissimos.</p>
-         </section>
-         <section class="Seccion" id="UltimasNoticias">
-            <h2>Últimas Noticias</h2>
-    <article><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error recusandae ipsam consectetur quam sunt a dolores beatae obcaecati, nesciunt temporibus?</p></article>
-    <article><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam maxime fuga praesentium suscipit, mollitia adipisci quibusdam temporibus sequi nihil beatae.
-    </p></article>
+            </section>
+         <h2>¿Por qué Elegirnos?</h2>
+            <section class="Seccion" id="PorQueElegirnos">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam officiis, hic fugit quis animi, eligendi ab accusantium voluptate vero praesentium rerum numquam perferendis eos, dignissimos delectus facere alias! Possimus in veritatis facere inventore vel laboriosam. Dignissimos quae quod, doloremque accusantium non eligendi adipisci quos ipsam rem obcaecati voluptatibus, quidem veritatis nihil, amet repellendus harum modi eum vero consequatur. Perspiciatis quisquam dolore aliquam nisi aliquid! Maxime laudantium saepe illum unde rerum excepturi suscipit, praesentium fuga reprehenderit earum autem odio quod sint ducimus architecto non tempora! At quidem quaerat sint voluptatum officiis. Soluta placeat repudiandae officiis reprehenderit explicabo ducimus perferendis non beatae a, odit illo optio maxime iusto sapiente reiciendis inventore eveniet magnam sed eos hic pariatur voluptates? Maiores enim voluptates recusandae autem asperiores suscipit perspiciatis, totam blanditiis nihil provident eum perferendis eos itaque? Reprehenderit pariatur blanditiis mollitia reiciendis molestias asperiores sint velit. Ullam officiis rem amet delectus est eos libero quia, reiciendis et molestias, ducimus, quos dolorum doloremque nulla facere commodi. Neque doloribus repudiandae voluptatem totam hic eius autem! Eligendi, vero? Impedit nobis reiciendis nostrum esse facilis sed non tenetur officiis nesciunt nihil quam rerum, aspernatur ipsa labore reprehenderit deleniti facere eveniet harum perferendis ad ea minima cupiditate. Eos, quam minus?</p>
+                <img src="./img/PorqueElegirnos.png" alt="PorqueElegirnos">
+
+             </section>
+         <h2>Propuesta Educativa</h2>
+             <section class="Seccion" id="PropuestaEducativa">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta autem adipisci molestias repellat dolores blanditiis aliquid rerum et corrupti eos corporis impedit a ea architecto non magni, explicabo hic! Dignissimos.</p>
+                <div id="PropuestaEdu">
+                <div class="card" >
+                    <img src="./img/PropuestaEducativa1.jpg" class="card-img-top" alt="PropuestaEducativa1">
+                    <div class="card-body">
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque, officia.</p>
+                    </div>
+                  </div>
+                  <div class="card" >
+                    <img src="./img/PropuestaEducativa2.jpg" class="card-img-top" alt="PropuestaEducativa2">
+                    <div class="card-body">
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, adipisci.</p>
+                    </div>
+                  </div>
+                  <div class="card" >
+                    <img src="./img/PropuestaEducativa5.jpg" class="card-img-top" alt="PropuestaEducativa3">
+                    <div class="card-body">
+                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, maiores.</p>
+                    </div>
+                  </div>
+                  <div class="card" >
+                    <img src="./img/PropuestaEducativa6.jpg" class="card-img-top" alt="PropuestaEducativa4>
+                    <div class="card-body">
+                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, cum? Lorem, ipsum.</p>
+                    </div>
+                  </div>
+                </div>
+            </section>
+        
+        <h2>Últimas Noticias</h2>
+
+            <section  id="UltimasNoticias">
+                <div>
+                    <h3>Noticia 1                    </h3>
+                    <article class="Noticias">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, in deleniti soluta rerum nemo placeat nulla? Maiores, impedit repudiandae. Velit?</p></article>
+                <button>Ver más</button></div>
+                <div>
+                    <h3>Noticia 2                  </h3>
+                    <article class="Noticias">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam maxime fuga praesentium suscipit, mollitia adipisci quibusdam temporibus sequi nihil beatae.
+                </p></article>
+            <button>Ver más</button></div>
         </section>
         
     <footer id="PiedePagina">
